[package]
name = "warmstart"
version = "0.1.0"
authors = ["Chris Lewin <antialiased@gmail.com>"]
edition = "2018"

[dependencies]
js-sys = "0.3"
wasm-bindgen = "0.2"
yew = "0.17.4"
glam = "0.11.2"

[dependencies.web-sys]
version = "0.3"
features = [
  'HtmlCanvasElement',
  'WebGlBuffer',
  'WebGlProgram',
  'WebGlRenderingContext',
  'WebGlShader',
  'WebGlUniformLocation',
]
